fix(nav): maintain consistent width on mobile and tablet, enable vertical scroll

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -227,12 +227,24 @@ a.nav-text:hover {
 
 .stellarnav.mobile {
 	
-	& .nav-list{
-        position: absolute;
-		left:0;
-		translate: 0 -5px;
+	& ul.nav-list{
+        position: fixed;
+		left: 50%;
+    	transform: translateX(-50%);
+		top: 5rem;
 		background: transparent;
 		background-color: var(--color-primary-light);
+		width: 95vw !important;
+		max-width: calc(100vw - 1rem) !important;
+		max-height: 70vh;
+		overflow-y: auto;
+		overflow-x: hidden;
+		padding: 0 0.5rem 0.5rem 0.5rem;
+		box-shadow: 0 6px 10px -2px rgba(0,211,169,0.75);
+		-webkit-box-shadow: 0 6px 10px -2px rgba(0,211,169,0.75);
+		-moz-box-shadow: 0 6px 10px -2px rgba(0,211,169,0.75);
+		z-index: 100;
+		
 	}
 
 	& li a {
